// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Button renders with disable status 1`] = `
.c0 {
  background-color: white;
  color: black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  margin-right: 20px;
}

.c0:last-child {
  margin-right: 0;
}

.c1 {
  background-color: transparent;
  color: black;
  border: none;
  height: 100%;
  font-size: 1.7rem;
  font-weight: bold;
  padding: 20px;
  -webkit-transition-duration: 0.4s;
  transition-duration: 0.4s;
  cursor: pointer;
}

.c1:hover {
  background-color: #cdcdcd;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  background-color: grey;
  color: #cdcdcd;
}

@media only screen and (max-width:568px) {
  .c1 {
    font-size: 1.4rem;
  }
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
      disabled=""
    >
      Filtrele
    </button>
  </div>
</div>
`;

exports[`Filter Button renders with false 1`] = `
.c0 {
  background-color: white;
  color: black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  margin-right: 20px;
}

.c0:last-child {
  margin-right: 0;
}

.c1 {
  background-color: transparent;
  color: black;
  border: none;
  height: 100%;
  font-size: 1.7rem;
  font-weight: bold;
  padding: 20px;
  -webkit-transition-duration: 0.4s;
  transition-duration: 0.4s;
  cursor: pointer;
}

.c1:hover {
  background-color: #cdcdcd;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  background-color: grey;
  color: #cdcdcd;
}

@media only screen and (max-width:568px) {
  .c1 {
    font-size: 1.4rem;
  }
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      Filtrele
    </button>
  </div>
</div>
`;

exports[`Filter Button renders with true 1`] = `
.c0 {
  background-color: white;
  color: black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  margin-right: 20px;
}

.c0:last-child {
  margin-right: 0;
}

.c1 {
  background-color: #DA514A;
  color: white;
  border: none;
  height: 100%;
  font-size: 1.7rem;
  font-weight: bold;
  padding: 20px;
  -webkit-transition-duration: 0.4s;
  transition-duration: 0.4s;
  cursor: pointer;
}

.c1:hover {
  background-color: #DA514A;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  background-color: grey;
  color: #cdcdcd;
}

@media only screen and (max-width:568px) {
  .c1 {
    font-size: 1.4rem;
  }
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      Filtrele
    </button>
  </div>
</div>
`;
